-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0
-
None
-
Kubuntu Linux x64
-
debe31e047060d790fb32c06e514d9df476df8bf e60d8a28034550ae08b258494726050ea9638602
Running the gallery example, if I have text selected in any of the text components and then I click on the "Edit" Menu, my selection is lost.
Also, it seems that the activeFocusItem enabled: binding for these actions doesn't seem to work, because the actions are always disabled. Even though I can use the keyboard shortcuts for cut/copy/paste.
| For Gerrit Dashboard: QTBUG-36292 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 76157,4 | X11: Qt::ActiveWindowFocusReason in QFocusEvent when appropriate | stable | qt/qtbase | Status: MERGED | +2 | 0 |
| 76252,3 | When a window loses focus to a popup, event has PopupFocusReason | stable | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 76258,2 | If a popup window is opened, do not change the focus | stable | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
| 77616,1 | When a window loses focus to a popup, event has PopupFocusReason | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 77623,1 | When a window loses focus to a popup, event has PopupFocusReason | dev | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 78572,1 | When a window loses focus to a popup, event has PopupFocusReason | stable | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 83497,4 | When a window loses focus to a popup, event has PopupFocusReason | release | qt/qtbase | Status: MERGED | +2 | 0 |
| 83498,3 | If a popup window is opened, do not change the focus | release | qt/qtdeclarative | Status: MERGED | +2 | 0 |