X11: Qt::ActiveWindowFocusReason in QFocusEvent when appropriate

When one window loses focus because another window got it, the reason
should not be Qt::OtherFocusReason.  If it is ActiveWindowFocusReason
or PopupFocusReason, any QtQuick text elements that were in the
window which lost focus will not deselect any selected text.

Task-number: QTBUG-36292
Change-Id: I4630f74e6aacd928284cedab6ed711c95b24bff7
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>

cregit: debe31e047060d790fb32c06e514d9df476df8bf https://github.com/qt/qtbase/commit/debe31e047060d790fb32c06e514d9df476df8bf